--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "firebase": "^9.6.10",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "leaflet": "^1.7.1",
+    "leaflet-fullscreen": "^1.0.2",
+    "granim": "^2.0.0"
   }
 }
