Add firebase storage solution

--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,7 @@
     "public": "public",
     "ignore": [
       "firebase.json",
+      "public/assets/sass",
       "**/.*",
       "**/node_modules/**"
     ]
